@@ -12,6 +12,7 @@ import java.io.File;
 import java.io.IOException;
 
 import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNull;
 import static org.junit.Assert.assertTrue;
 
 public class W3CDomTest {
@@ -134,6 +135,24 @@ public class W3CDomTest {
         assertTrue(body.hasAttr("name\""));
 
         Document w3Doc = new W3CDom().fromJsoup(jsoupDoc);
+    }
+
+    @Test public void treatsUndeclaredNamespaceAsLocalName() {
+        String html = "<fb:like>One</fb:like>";
+        org.jsoup.nodes.Document doc = Jsoup.parse(html);
+
+        Document w3Doc = new W3CDom().fromJsoup(doc);
+        Node htmlEl = w3Doc.getFirstChild();
+
+        assertNull(htmlEl.getNamespaceURI());
+        assertEquals("html", htmlEl.getLocalName());
+        assertEquals("html", htmlEl.getNodeName());
+
+        Node fb = htmlEl.getFirstChild().getNextSibling().getFirstChild();
+        assertNull(fb.getNamespaceURI());
+        assertEquals("like", fb.getLocalName());
+        assertEquals("fb:like", fb.getNodeName());
+
     }
 }
 
