@@ -22,6 +22,10 @@ jsoup changelog
     many pages.
     <https://github.com/jhy/jsoup/issues/797>
 
+  * Bugfix: when converting a Jsoup document to a W3C DOM, if an element is namespaced but not in a defined namespace,
+    set it to the global namespace.
+    <https://github.com/jhy/jsoup/issues/848>
+
 *** Release 1.11.3 [2018-Apr-15]
   * Improvement: CDATA sections are now treated as whitespace preserving (regardless of the containing element), and are
     round-tripped into output HTML.
